samples/fortio/cr-fortio-vpc-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: fortio-vpc-mc1
  labels:
    cloud.googleapis.com/location: us-central1
  annotations:
    run.googleapis.com/launch-stage: ALPHA
    run.googleapis.com/ingress: all
    run.googleapis.com/ingress-status: all
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/client-name: gcloud
        run.googleapis.com/network-interfaces: '[{"network": "default", "subnetwork": "default"}]'
        autoscaling.knative.dev/minScale: '1'
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/maxScale: '1'
        run.googleapis.com/cpu-throttling: 'false'
    spec:
      containerConcurrency: 10
      timeoutSeconds: 900
      serviceAccountName: k8s-fortio@wlhe-cr.iam.gserviceaccount.com
      containers:
      - image: gcr.io/wlhe-cr/krun:costin
#        ports:
#        - name: h2c
#          containerPort: 15008
        env:
        - name: TRUST_DOMAIN
          value: cluster.local
        - name: ISTIO_EXCLUDE_INTERFACES
          value: eth0
        - name: MESH
          value: //container.googleapis.com/projects/wlhe-cr/locations/us-central1-c/clusters/istio
        - name: DEPLOY
          value: 221016-0432
        resources:
          limits:
            cpu: '1'
            memory: 1G
      - image: gcr.io/wlhe-cr/fortio:latest
        args: ["server"]
        ports:
          - name: http1
            containerPort: 8080
        resources:
          limits:
            cpu: '1'
            memory: 1G
  traffic:
  - percent: 100
    latestRevision: true
