samples/fortio/fortio-vpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio-vpc
  namespace: fortio
spec:
  ports:
    - port: 8080
      name: http-echo
  selector:
    app: fortio-vpc

---
# Make sure this is secure, no permissive
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: fortio-vpc
  namespace: fortio
spec:
  selector:
    matchLabels:
      app: fortio-vpc
  mtls:
    mode: STRICT
---
# No guessing on client side either
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fortio-vpc
  namespace: fortio
spec:
  host: fortio-vpc
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
      subjectAltNames:
        - spiffe://wlhe-cr.svc.id.goog/ns/fortio/sa/default
        - spiffe://cluster.local/ns/fortio/sa/default
