samples/fortio/k8s-registration.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CLOUDRUN_SERVICE}
  namespace: ${WORKLOAD_NAMESPACE}
spec:
  ports:
    - port: 8080
      name: http-echo
  selector:
    app: ${CLOUDRUN_SERVICE}

---
# Make sure this is secure, no permissive
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ${CLOUDRUN_SERVICE}
  namespace: ${WORKLOAD_NAMESPACE}
spec:
  selector:
    matchLabels:
      app: ${CLOUDRUN_SERVICE}
  mtls:
    mode: STRICT
---
# No guessing on client side either
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ${CLOUDRUN_SERVICE}
  namespace: ${WORKLOAD_NAMESPACE}
spec:
  host: ${CLOUDRUN_SERVICE}
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
      subjectAltNames:
        - spiffe://${PROJECT_ID}.id.goog/ns/${WORKLOAD_NAMESPACE}/sa/default
        - spiffe://cluster.local/ns/${WORKLOAD_NAMESPACE}/sa/default
